fix: prevent page shift with always showing scrollbar 2

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
-  overflow-y: scroll;
+  scrollbar-gutter: stable;
 }
